[package]
name = "dra-cli"
version = "0.1.0"
authors = ["sullivandj"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
regex = "1.4.3"

[dependencies.rusqlite]
version = "0.24.2"
features = ["bundled"]